api: add new routes for managing groups
